--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "dependencies": {
     "@mozilla/readability": "^0.5.0",
+    "defuddle": "^0.6.6",
     "tippy.js": "^6.3.7",
     "url": "^0.11.0"
   },
