--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/index.js",
   "dependencies": {
     "@mozilla/readability": "^0.5.0",
+    "@types/jszip": "^3.4.0",
     "defuddle": "^0.6.6",
+    "jszip": "^3.10.1",
     "tippy.js": "^6.3.7",
     "url": "^0.11.0"
   },
